--- a/css/app.css
+++ b/css/app.css
@@ -23,9 +23,12 @@ body {
   height: 16px;
   vertical-align: text-bottom;
 }
+.capitalize {
+  text-transform: capitalize;
+}
 
 /*
- * Sidebar
+ * Dashboard Sidebar
  */
 
 .sidebar {
